--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body >
         <div ng-controller="homeController">
+            <p>testing </p>p>
             <h1>Home!!</h1>
             {{dummy}}
         </div>
